source_code/gatt_server/build/log/idf_py_stdout_output_121095
[1/11] Building C object esp-idf/sensor_filter/CMakeFiles/__idf_sensor_filter.dir/sensor_filter.c.obj
FAILED: esp-idf/sensor_filter/CMakeFiles/__idf_sensor_filter.dir/sensor_filter.c.obj 
/home/doannhat214031/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/config -I/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter -I/home/doannhat214031/esp-idf/components/newlib/platform_include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/include/freertos -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/include -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/include/soc -I/home/doannhat214031/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/doannhat214031/esp-idf/components/esp_hw_support/port/esp32/. -I/home/doannhat214031/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/doannhat214031/esp-idf/components/heap/include -I/home/doannhat214031/esp-idf/components/log/include -I/home/doannhat214031/esp-idf/components/soc/include -I/home/doannhat214031/esp-idf/components/soc/esp32 -I/home/doannhat214031/esp-idf/components/soc/esp32/include -I/home/doannhat214031/esp-idf/components/hal/esp32/include -I/home/doannhat214031/esp-idf/components/hal/include -I/home/doannhat214031/esp-idf/components/hal/platform_port/include -I/home/doannhat214031/esp-idf/components/esp_rom/include -I/home/doannhat214031/esp-idf/components/esp_rom/include/esp32 -I/home/doannhat214031/esp-idf/components/esp_rom/esp32 -I/home/doannhat214031/esp-idf/components/esp_common/include -I/home/doannhat214031/esp-idf/components/esp_system/include -I/home/doannhat214031/esp-idf/components/esp_system/port/soc -I/home/doannhat214031/esp-idf/components/esp_system/port/include/private -I/home/doannhat214031/esp-idf/components/xtensa/include -I/home/doannhat214031/esp-idf/components/xtensa/esp32/include -I/home/doannhat214031/esp-idf/components/lwip/include -I/home/doannhat214031/esp-idf/components/lwip/include/apps -I/home/doannhat214031/esp-idf/components/lwip/include/apps/sntp -I/home/doannhat214031/esp-idf/components/lwip/lwip/src/include -I/home/doannhat214031/esp-idf/components/lwip/port/include -I/home/doannhat214031/esp-idf/components/lwip/port/freertos/include -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include/arch -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server=. -fmacro-prefix-map=/home/doannhat214031/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/sensor_filter/CMakeFiles/__idf_sensor_filter.dir/sensor_filter.c.obj -MF esp-idf/sensor_filter/CMakeFiles/__idf_sensor_filter.dir/sensor_filter.c.obj.d -o esp-idf/sensor_filter/CMakeFiles/__idf_sensor_filter.dir/sensor_filter.c.obj -c /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter/sensor_filter.c
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter/sensor_filter.c:51:7: error: conflicting types for 'filter_mq7_apply_ema'; have 'float(int,  float)'
   51 | float filter_mq7_apply_ema(int new_value, float alpha) {
      |       ^~~~~~~~~~~~~~~~~~~~
In file included from /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter/sensor_filter.c:1:
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter/sensor_filter.h:15:5: note: previous declaration of 'filter_mq7_apply_ema' with type 'int(int,  float)'
   15 | int filter_mq7_apply_ema(int new_value, float alpha);
      |     ^~~~~~~~~~~~~~~~~~~~
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter/sensor_filter.c: In function 'filter_dht11_temperature':
/home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/sensor_filter/sensor_filter.c:71:9: warning: using integer absolute value function 'abs' when argument is of floating-point type 'float' [-Wabsolute-value]
   71 |     if (abs(raw_temp - last_dht_temp) >= 1) {
      |         ^~~
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/bootloader/esp-idf/esptool_py && /home/doannhat214031/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/doannhat214031/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj
In file included from /home/doannhat214031/Desktop/Bachelor-of-Science-Research-Project/source_code/gatt_server/main/gatts_demo.c:29:
/home/doannhat214031/esp-idf/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
ninja: build stopped: subcommand failed.
